# Segmentation-AppHistory

./: .gitignore  README.md  example_env  pyproject.toml  segmentation_01.ipynb  segmentation_2.py  segmentation_BERT.py  segmentation_test.py  tutorial.ipynb
