[tool.poetry]
name = "segmentation-apphistory"
version = "0.1.0"
description = "Used to categorize dr-one sdk users from apphistory values"
authors = ["Camilo Herrera <camilo.herrera@digitalreef.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
contractions = "^0.1.72"
gensim = "^4.2.0"
spacy = "^3.4.3"
nltk = "^3.7"
pyLDAvis = "^3.3.1"
wordcloud = "^1.8.2"
ipykernel = "^6.19.3"
bertopic = "^0.12.0"
psycopg2 = "^2.9.5"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
